# mealy

./: .gitignore  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
Client/: .env  index.html  package-lock.json  package.json  vite.config.js
Client/src/: App.css  App.jsx  Routes.jsx  index.css  main.jsx  routes.js  routes.jsx
migrations/versions/: 02d58841d5f5_merge_branches.py  28144b1cd9c9_.py  50a797160ee2_.py  64df8490136a_reset.py  685f0ca897c0_reinitialise_migrations_and_add_image_.py  77221df61c25_initial.py  7a5534cd0f40_add_caterer_id_foreign_key_to_order.py  850980eebbca_add_caterer_id_foreign_key_to_order.py  (+3 more)
server/: .env  Pipfile  app.py  auth.py  commands.py  config.py  database.py  extensions.py  pyproject.toml  requirements.txt  seed.py  seed_meals.py  seed_user.py
server/env/: pyvenv.cfg
server/migrations/versions/: 27ddea4c9d01_add_name_column_to_user_model_and_.py  436a7ae0b967_initial.py  7a4990487680_merge_multiple_migration_heads.py  ab3c48e5cd74_.py  f0a073883e7f_add_caterer_id_to_orders_table.py  fefec9d79495_add_caterer_id_to_menu_table.py
server/models/: MealOption.py  Menu.py  Menu_item.py  Notification.py  Order.py  __init__.py  caterer.py  models.py  order.py  payment.py  user.py
server/routes/: Menu.py  Order_routes.py  __init__.py  admin_routes.py  auth_routes.py  meal_routes.py  notification.py  order_routes.py  payment_route.py  payment_routes.py  user_routes.py
server/services/: daraja.py
server/tests/: tests_app.py
server/utils/: decorators.py  utils.py
(+56 files in other folders)
