[tool.poetry]
name = "mealy"
version = "0.1.0"
description = ""
authors = ["Titus Kiprono <kipronotitus254@gmail.com>"]
package-mode = false  # ✅ Add this line


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flask = "^2.3.0"
requests = "^2.31.0"
python-dotenv = "^1.1.1"
flask-cors = "^6.0.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
flask-bcrypt = "^1.0.1"
sqlalchemy-serializer = "^1.4.22"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
