[tool.poetry]
name = "mealy"
version = "0.1.0"
description = "Your project description"
authors = ["Titus Kiprono kipronotitus254@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flask = "^2.3.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
